--- a/app/src/main/res/layout/activity_ingresar_paciente.xml
+++ b/app/src/main/res/layout/activity_ingresar_paciente.xml
@@ -28,7 +28,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/NombrePacient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -36,7 +36,7 @@
                 android:inputType="textPersonName" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName2"
+                android:id="@+id/ApellidoPacient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -49,7 +49,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/editTextNumber3"
+                    android:id="@+id/DUI"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -58,7 +58,7 @@
                     android:inputType="number" />
 
                 <EditText
-                    android:id="@+id/editTextNumber4"
+                    android:id="@+id/Edad"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -74,7 +74,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/editTextPhone"
+                    android:id="@+id/Telefono"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -95,6 +95,44 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <EditText
+                    android:id="@+id/Responsable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Nombre del responsable"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/DUIRes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="DUI"
+                    android:inputType="number" />
+
+                <EditText
+                    android:id="@+id/TelefonoRes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Telefono"
+                    android:inputType="number" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
@@ -105,7 +143,7 @@
                     android:text="Motivo de la consulta:" />
 
                 <EditText
-                    android:id="@+id/editTextTextMultiLine"
+                    android:id="@+id/MotivoConsulta"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -113,19 +151,13 @@
                     android:inputType="textMultiLine" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/Habitaciones"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:gravity="center"
                     android:text="Habitaciones disponibles:" />
-
-                <Spinner
-                    android:id="@+id/Habitaciones"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/textView4"
@@ -136,15 +168,27 @@
                     android:gravity="center"
                     android:text="Seleccione el personal medico:" />
 
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Enfermeras:" />
+
                 <Spinner
-                    android:id="@+id/Enfermeras"
+                    android:id="@+id/EnfermerasSpin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp" />
 
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Doctores" />
+
                 <Spinner
-                    android:id="@+id/Medicos"
+                    android:id="@+id/MedicosSpin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
