--- a/app/src/main/res/layout/activity_personal_medico.xml
+++ b/app/src/main/res/layout/activity_personal_medico.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,8 +7,50 @@
     android:orientation="vertical"
     tools:context=".PersonalMedico">
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="Personal médico"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/BuscarText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Buscar un médico..."
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/BuscarMed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Buscar..." />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/DocsDisponibles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="Disponibles:"
+        android:textColor="#3F51B5" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerDocs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</RelativeLayout>
+
+</LinearLayout>
