--- a/app/src/main/res/layout/activity_seleccionar_medico.xml
+++ b/app/src/main/res/layout/activity_seleccionar_medico.xml
@@ -56,7 +56,7 @@
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/JVPM"
+                    android:id="@+id/JVPM2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -93,20 +93,22 @@
                 android:gravity="center" />
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/TelefonoSelectDr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:visibility="visible" />
 
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/EdadDR"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:visibility="visible" />
 
         </LinearLayout>
 
