Corregidos los errores

--- a/app/src/main/res/layout/activity_seleccionar_medico.xml
+++ b/app/src/main/res/layout/activity_seleccionar_medico.xml
@@ -21,8 +21,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="4dp"
-        app:cardCornerRadius="5dp">
+        android:elevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,6 +35,7 @@
                 app:srcCompat="@drawable/recursos11" />
 
             <LinearLayout
+                android:id="@+id/L1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -45,81 +45,70 @@
                     android:id="@+id/NombreDr2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text="TextView" />
 
                 <TextView
                     android:id="@+id/EspecialidadDR2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/JVPM2"
+                    android:id="@+id/CodigoJVPM"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text="TextView" />
 
             </LinearLayout>
         </LinearLayout>
 
+
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/cardview_light_background"
+        android:elevation="4dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/TelefonoSelectDr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="TextView"
+            android:visibility="visible" />
 
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="2"
-                android:text="TextView" />
+        <TextView
+            android:id="@+id/EdadDR"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="TextView"
+            android:visibility="visible" />
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center" />
+        <Spinner
+            android:id="@+id/AsignarPaciente"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:gravity="center" />
 
-            <TextView
-                android:id="@+id/TelefonoSelectDr"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:text="TextView"
-                android:visibility="visible" />
+        <Button
+            android:id="@+id/ActualizarMedico"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="Guardar cambios" />
 
-            <TextView
-                android:id="@+id/EdadDR"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:text="TextView"
-                android:visibility="visible" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="Guardar cambios" />
+    </LinearLayout>
 
 </LinearLayout>
