--- a/app/src/main/res/layout/activity_editar_paciente__i.xml
+++ b/app/src/main/res/layout/activity_editar_paciente__i.xml
@@ -143,6 +143,7 @@
                 android:id="@+id/button4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="darAlta"
                 android:text="Dar de alta" />
 
         </LinearLayout>
