--- a/app/src/main/res/layout/activity_pagina_principal__i.xml
+++ b/app/src/main/res/layout/activity_pagina_principal__i.xml
@@ -171,6 +171,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+                                android:onClick="irPacientes"
                                 app:srcCompat="@drawable/recursos20" />
 
                             <TextView
