--- a/app/src/main/res/layout/activity_personal_medico.xml
+++ b/app/src/main/res/layout/activity_personal_medico.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Buscar un médico..."
+            android:hint="Buscar personal médico..."
             android:inputType="textPersonName" />
 
         <Button
