--- a/app/src/main/res/layout/activity_seleccionar_medico.xml
+++ b/app/src/main/res/layout/activity_seleccionar_medico.xml
@@ -29,7 +29,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/FotoProfMedico"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/recursos11" />
@@ -70,45 +70,41 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:background="@color/cardview_light_background"
-        android:elevation="4dp">
+        android:elevation="4dp"
+        android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/TelefonoSelectDr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/EdadDR"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:visibility="visible" />
 
         <TextView
-            android:id="@+id/TelefonoSelectDr"
+            android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="TextView"
-            android:visibility="visible" />
+            android:layout_marginBottom="10dp"
+            android:text="Pacientes asignados:" />
 
-        <TextView
-            android:id="@+id/EdadDR"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="TextView"
-            android:visibility="visible" />
-
-        <Spinner
-            android:id="@+id/AsignarPaciente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:gravity="center" />
-
-        <Button
-            android:id="@+id/ActualizarMedico"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="Guardar cambios" />
-
-    </LinearLayout>
+                <ListView
+                    android:id="@+id/ListaPacientes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
 </LinearLayout>
