--- a/app/src/main/res/layout/activity_seleccionar_medico.xml
+++ b/app/src/main/res/layout/activity_seleccionar_medico.xml
@@ -94,7 +94,7 @@
                     android:visibility="visible" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/TotalPacientesTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
